# paytm_test_transaction

./: .env  Cargo.toml
src/: main.rs
src/api/: create_qr_code.rs  mod.rs  transaction_status.rs
