[package]
name = "paytm_test_transaction"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
paytm_checksum = { git = "https://github.com/ramauditplus/paytm_rust_checksum.git", branch = "main" }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json"] }
dotenvy = "0.15.7"
